[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/gloot/ctrl_inventory.gd" type="Script" id=1]
[ext_resource path="res://addons/gloot/inventory.gd" type="Script" id=2]
[ext_resource path="res://tests/data/item_definitions_basic.tres" type="Resource" id=3]
[ext_resource path="res://examples/inventory_transfer.gd" type="Script" id=4]
[ext_resource path="res://images/icon_key.png" type="Texture" id=5]
[ext_resource path="res://addons/gloot/ctrl_item_slot.gd" type="Script" id=6]
[ext_resource path="res://addons/gloot/item_slot.gd" type="Script" id=7]

[node name="InventoryTransfer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CtrlInventory" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
inventory_path = NodePath("../../../Inventory")
default_item_icon = ExtResource( 5 )

[node name="CtrlInventory2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
inventory_path = NodePath("../../../Inventory2")
default_item_icon = ExtResource( 5 )

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 508.0
margin_right = 1024.0
margin_bottom = 522.0
text = "Use the buttons below to equip/unequip an item from the left inventory."

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 526.0
margin_right = 1024.0
margin_bottom = 558.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="CtrlItemSlot" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
script = ExtResource( 6 )
item_slot_path = NodePath("../../../../ItemSlot")
label_visible = false

[node name="BtnEquipL" type="Button" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 36.0
margin_right = 83.0
margin_bottom = 32.0
text = "Equip"

[node name="BtnUnequipL" type="Button" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 87.0
margin_right = 153.0
margin_bottom = 32.0
text = "Unequip"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 562.0
margin_right = 1024.0
margin_bottom = 576.0
text = "Use the buttons below to transfer items from one inventory to the other."

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="BtnRToL" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "<<<"

[node name="BtnLToR" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = ">>>"

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 2 )
item_protoset = ExtResource( 3 )
contents = [ "item1", "item2" ]

[node name="Inventory2" type="Node" parent="."]
script = ExtResource( 2 )
item_protoset = ExtResource( 3 )
contents = [ "item1", "item2" ]

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource( 7 )
inventory_path = NodePath("../Inventory")

[node name="ItemSlot2" type="Node" parent="."]
script = ExtResource( 7 )
inventory_path = NodePath("../Inventory2")
